# forksan

./: Cargo.toml  LICENSE  Makefile  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
crates/autofork/: Cargo.toml
crates/autofork-core/: Cargo.toml
crates/autofork-core/src/: config.rs  discovery.rs  frontmatter.rs  lib.rs  moments.rs  notification.rs  project.rs  protocol.rs  store.rs  tags.rs  wake.rs
crates/autofork-daemon/: Cargo.toml
crates/autofork-daemon/src/: daemon.rs  main.rs  planner.rs  server.rs  sweep.rs  transcript.rs
crates/autofork-daemon/tests/: integration.rs
crates/autofork/src/: client.rs  commands.rs  hook.rs  main.rs
crates/autofork/tests/: hook_flow.rs
crates/forksan/: Cargo.toml
crates/forksan-core/: Cargo.toml
crates/forksan-core/src/: config.rs  discovery.rs  duration.rs  frontmatter.rs  lib.rs  moments.rs  project.rs  prompt.rs  protocol.rs  schedule.rs  store.rs  wake.rs
crates/forksan-daemon/: Cargo.toml
crates/forksan-daemon/src/: daemon.rs  gates.rs  idle.rs  main.rs  planner.rs  runner.rs  server.rs  sweep.rs
crates/forksan-daemon/tests/: integration.rs
crates/forksan/src/: client.rs  commands.rs  hook.rs  main.rs
crates/forksan/tests/: hook_flow.rs
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: autofork-hook.sh  bootstrap.sh  forksan-hook.sh
