[workspace]
resolver = "2"
members = ["crates/forksan-core", "crates/forksan-daemon", "crates/forksan"]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["TheUnderdev <me@theunder.dev>"]
repository = "https://github.com/TheUnderdev/forksan"

[workspace.dependencies]
forksan-core = { path = "crates/forksan-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "sync", "time", "signal", "fs"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
