[package]
name = "autofork-daemon"
description = "The autofork daemon: session tracking, fork moments, fork execution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "autofork-daemon"
path = "src/main.rs"

[dependencies]
autofork-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
