[package]
name = "autofork"
description = "autofork CLI: Claude Code hook entrypoint and daemon control"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "autofork"
path = "src/main.rs"

[dependencies]
autofork-core.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
