[package]
name = "forksan-daemon"
description = "The forksan daemon: session tracking, fork moments, fork execution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "forksan-daemon"
path = "src/main.rs"

[dependencies]
forksan-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
